After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736895 - mplex: logical disjunction consecutive goto, break statements
mplex: logical disjunction consecutive goto, break statements
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-18 12:25 UTC by Anuj
Modified: 2014-11-08 14:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mplex: logical disjunction consecutive goto, break statements unnecessary. (1.68 KB, patch)
2014-09-18 12:25 UTC, Anuj
committed Details | Review

Description Anuj 2014-09-18 12:25:03 UTC
Created attachment 286489 [details] [review]
mplex: logical disjunction consecutive goto, break statements unnecessary.

In gstmplex.cc consecutive goto, break statements are unnecessary.
Comment 1 Luis de Bethencourt 2014-09-23 16:21:20 UTC
The breaks are left there to make the code more legible. It is a style issue,
and since the code never gets there (since it goes to the goto) it doesn't
affect anything.

Sorry but I am going to decline this patch to keep the style consistent over
Comment 2 Luis de Bethencourt 2014-09-23 17:02:15 UTC
Review of attachment 286489 [details] [review]:

As stated above
Comment 3 Luis de Bethencourt 2014-09-24 13:42:21 UTC
Comment on attachment 286489 [details] [review]
mplex: logical disjunction consecutive goto, break statements unnecessary.

After some more discussion this has been accepted.

Will fix the commit message myself.
Comment 4 Luis de Bethencourt 2014-09-24 13:47:09 UTC
Comment on attachment 286489 [details] [review]
mplex: logical disjunction consecutive goto, break statements unnecessary.

Merged
Comment 5 Luis de Bethencourt 2014-09-24 13:47:31 UTC
I run gst-indent and the two coding style in this patch are good.